# EDK-master

./: .gitignore  CMakeLists.txt  HueLicense.txt  README.md
Licenses/: mdns_responder.txt
libhuestream/bridgediscovery/: CMakeLists.txt
libhuestream/bridgediscovery/include/bridgediscovery/: BridgeDiscovery.h  BridgeDiscoveryCheckIpTask.h  BridgeDiscoveryClassType.h  BridgeDiscoveryConfiguration.h  BridgeDiscoveryConst.h  BridgeDiscoveryIpCheckResult.h  BridgeDiscoveryResult.h  BridgeDiscoveryReturnCode.h  BridgeInfo.h  IBridgeDiscovery.h  IBridgeDiscoveryCallback.h
libhuestream/bridgediscovery/mock/: CMakeLists.txt
libhuestream/bridgediscovery/mock/src/: MockBridgeDiscoveryMethod.cpp
libhuestream/bridgediscovery/models/: BridgeDiscovery.phdm  BridgeDiscoveryResult.phdm  models.phim
libhuestream/bridgediscovery/src/: BridgeDiscovery.cpp  BridgeDiscoveryConfiguration.cpp  BridgeDiscoveryResult.cpp  BridgeInfo.cpp
libhuestream/bridgediscovery/src/events/: BridgeDiscoveryEventNames.h  BridgeDiscoveryEventNotifier.h  BridgeDiscoveryEventTranslator.h  BridgeDiscoveryEvents.h  BridgeDiscoveryTaskEventsData.h  IBridgeDiscoveryEventNotifier.h
libhuestream/bridgediscovery/src/method/: BridgeDiscoveryMethodBase.h  BridgeDiscoveryMethodFactory.h  BridgeDiscoveryMethodFactoryDefault.cpp  BridgeDiscoveryMethodUtil.cpp  BridgeDiscoveryMethodUtil.h  IBridgeDiscoveryMethod.h
libhuestream/bridgediscovery/src/tasks/: BridgeDiscoveryCheckIpArrayTask.cpp  BridgeDiscoveryCheckIpArrayTask.h  BridgeDiscoveryCheckIpTask.cpp  BridgeDiscoveryTask.cpp  BridgeDiscoveryTask.h
libhuestream/bridgediscovery/tests/: CMakeLists.txt  TestBridgeDiscovery.cpp  TestBridgeDiscoveryCallback.cpp  TestBridgeDiscoveryResult.cpp
libhuestream/bridgediscovery/tests/method/: TestBridgeDiscoveryMethodFactoryDefault.cpp
libhuestream/huestream/: CMakeLists.txt  HueEDK.cpp  HueEDK.h  HueStream.cpp  HueStream.h  HueStreamFactories.cpp  HueStreamFactories.h  IHueStream.h
libhuestream/huestream/common/data/: ApiVersion.cpp  ApiVersion.h  Area.cpp  Area.h  Bridge.cpp  Bridge.h  BridgeSettings.cpp  BridgeSettings.h  Color.cpp  Color.h  CuboidArea.cpp  CuboidArea.h  Group.cpp  Group.h  HueStreamData.cpp  HueStreamData.h  IArea.h  Light.cpp  Light.h  Location.cpp  Location.h  Scene.cpp  Scene.h  Zone.cpp  Zone.h
libhuestream/huestream/common/http/: BridgeHttpClient.cpp  BridgeHttpClient.h  HttpClient.cpp  HttpClient.h  HttpClientProvider.cpp  HttpClientProvider.h  HttpRequestInfo.cpp  HttpRequestInfo.h  IBridgeHttpClient.h  IHttpClient.h
libhuestream/huestream/common/language/: DummyTranslator.cpp  DummyTranslator.h  IMessageTranslator.h
libhuestream/huestream/common/serialize/: ObjectBuilderBase.cpp  ObjectBuilderBase.h  Serializable.cpp  Serializable.h  SerializerHelper.h
libhuestream/huestream/common/storage/: FileStorageAccessor.cpp  FileStorageAccessor.h  IStorageAccessor.h
libhuestream/huestream/common/time/: ITimeManager.h  ITimeProvider.h  TimeManager.cpp  TimeManager.h  TimeProviderProvider.h
libhuestream/huestream/common/util/: HueMath.cpp  HueMath.h  Rand.cpp  Rand.h
libhuestream/huestream/config/: AppSettings.cpp  AppSettings.h  Config.cpp  Config.h  ObjectBuilder.cpp  ObjectBuilder.h
libhuestream/huestream/connect/: Authenticator.cpp  Authenticator.h  BasicGroupLightController.cpp  BasicGroupLightController.h  BridgeConfigRetriever.cpp  BridgeConfigRetriever.h  BridgeFileStorageAccessor.cpp  BridgeFileStorageAccessor.h  BridgeSearcher.cpp  BridgeSearcher.h  BridgeStreamingChecker.cpp  BridgeStreamingChecker.h  Connect.cpp  Connect.h  ConnectionFlow.cpp  ConnectionFlow.h  ConnectionFlowFactory.cpp  ConnectionFlowFactory.h  ConnectionMonitor.cpp  ConnectionMonitor.h  FeedbackMessage.cpp  FeedbackMessage.h  FullConfigRetriever.cpp  FullConfigRetriever.h  IBasicGroupLightController.h  IBridgeAuthenticator.h  IBridgeSearcher.h  IBridgeStorageAccessor.h  IBridgeStreamingChecker.h  IConnectionFlow.h  IConnectionFlowFactory.h  IConnectionMonitor.h  IFeedbackMessageHandler.h  IFullConfigRetriever.h  IMessageDispatcher.h  MessageDispatcher.cpp  MessageDispatcher.h  OperationResult.h
libhuestream/huestream/effect/: IMixer.h  Mixer.cpp  Mixer.h
libhuestream/huestream/effect/animation/: ActionPlayer.cpp  ActionPlayer.h  IPlayer.h  Player.cpp  Player.h
libhuestream/huestream/effect/effects/: AreaEffect.cpp  AreaEffect.h  ExplosionEffect.cpp  ExplosionEffect.h  HitEffect.cpp  HitEffect.h  LightIteratorEffect.cpp  LightIteratorEffect.h  LightSourceEffect.cpp  LightSourceEffect.h  ManualEffect.cpp  ManualEffect.h  MultiChannelEffect.cpp  MultiChannelEffect.h  SequenceEffect.cpp  SequenceEffect.h  SphereLightSourceEffect.cpp  SphereLightSourceEffect.h
libhuestream/huestream/effect/lightscript/: Action.cpp  Action.h  ITimeline.h  LightScript.cpp  LightScript.h  Timeline.cpp  Timeline.h
libhuestream/huestream/stream/: DtlsConnector.cpp  DtlsConnector.h  DtlsEntropyProvider.cpp  DtlsEntropyProvider.h  DtlsTimerProvider.cpp  DtlsTimerProvider.h  DtlsUdpClient.cpp  DtlsUdpClient.h  IConnector.h  IStream.h  IStreamFactory.h  IStreamStarter.h  ProtocolSerializer.cpp  ProtocolSerializer.h  Stream.cpp  Stream.h  StreamFactory.cpp  StreamFactory.h  StreamSettings.cpp  StreamSettings.h  StreamStarter.cpp  StreamStarter.h  UdpConnector.cpp  UdpConnector.h
libhuestream/support/mock/: CMakeLists.txt
libhuestream/test/: CMakeLists.txt
libhuestream/test/huestream/: TestHueEDK.cpp  TestHueStream.cpp
libhuestream/test/huestream/_mock/: MockAction.h  MockAnimationEffect.h  MockBasicGroupLightController.h  MockBridge.h  MockBridgeAuthenticator.h  MockBridgeHttpClient.h  MockConfigRetriever.h  MockConnect.h  MockConnectionFlowFactory.h  MockConnectionMonitor.h  MockConnector.h  MockEffect.h  MockFeedbackMessageHandler.h  MockHttpClient.h  MockHueStream.h  MockMessageDispatcher.h  MockMessageTranslator.h  MockMixer.h  MockScheduler.h  MockStream.h  MockStreamStarter.h  MockTimeManager.h  MockTimeline.h
libhuestream/test/huestream/_stub/: StubMessageDispatcher.h
wrappers/python/: CMakeLists.txt  setup.py.in
(+509 files in other folders)
